Magiclamp: fix integer overflow, cpu waste

BUG: 284738